# sdk-nrf

./: CODEOWNERS  west.yml
applications/nrf5340_audio/: CMakeLists.txt  Kconfig.defaults  prj.conf  prj_release.conf
applications/nrf5340_audio/boards/: nrf5340_audio_dk_nrf5340_cpuapp.overlay  nrf5340_audio_dk_nrf5340_cpuapp_fota.overlay  nrf5340dk_nrf5340_cpuapp.overlay
applications/nrf5340_audio/broadcast_sink/: main.c
applications/nrf5340_audio/broadcast_source/: main.c
include/: contin_array.h  data_fifo.h  led_ctrl.h  pcm_mix.h  pcm_stream_channel_modifier.h  sample_rate_conv_aware.h  tone.h
include/audio_module/: audio_module.h  audio_module_template.h
include/audio_modules/: audio_module_template.h  lc3_decoder.h  lc3_encoder.h  tone_generator.h
lib/: CMakeLists.txt  Kconfig
lib/contin_array/: contin_array.c
lib/data_fifo/: data_fifo.c
lib/led/: CMakeLists.txt  Kconfig  led_ctrl.c
lib/pcm_mix/: pcm_mix.c
lib/pcm_stream_channel_modifier/: pcm_stream_channel_modifier.c
lib/sample_rate_conv_aware/: CMakeLists.txt  Kconfig  sample_rate_conv_aware.c  sample_rate_conv_aware_filters.h
lib/tone/: tone.c
samples/cmsis_resampler/: CMakeLists.txt  prj.conf
samples/lc3_comparison/: CMakeLists.txt  Kconfig  prj.conf
samples/lc3_comparison/src/: main.c
subsys/: CMakeLists.txt  Kconfig
subsys/a_mod/: Kconfig  ablk_api.h  amod_api.c  amod_api.h  aobj_api.h
subsys/audio_module/: CMakeLists.txt  Kconfig  ablk_api.h  amod_api.c  amod_api.h  audio_module.c  audio_module.h  audio_module_template.c
tests/nrf5340_audio/lc3_module/: CMakeLists.txt  Kconfig  prj.conf  readme.txt  testcase.yaml
tests/nrf5340_audio/lc3_module/src/: audio_data.c  audio_data.h  common.h  decoder_test.c  fakes.c  fakes.h  main.c  sweep21ms_16b48khz_mono_lc3_in.h  sweep21ms_16b48khz_mono_lc3_ref.h  sweep21ms_16b48khz_stereo_lc3_in.h  sweep21ms_16b48khz_stereo_lc3_ref.h  sweep21ms_16b48khz_stereo_wav_in.h  sweep21ms_16b48khz_stereo_wav_ref.h
tests/subsys/a_mod/: prj.conf  (+2 more)
(+188 files in other folders)
